# dh_ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
ai_interview/projects/text-similarity/: .gitignore  README.md  dataset.py  json_to_csv.py  main.py  pyproject.toml  test.ipynb  test.py
ai_interview/projects/text-similarity/SBERT/: model.py
ai_interview/projects/text-similarity/bert/: analysis.ipynb  config.py  config.toml  evaluate_title.py  feature_extractor.py  model.py  readme.md  search.py  test.ipynb  train.py  type_definitions.py  vectory.py  vocab.py
ai_interview/projects/text-similarity/bert/data/evaluate/: 标题测试原材料.csv  标题测试原材料_1000_from_test_10000.csv
ai_interview/projects/text-similarity/bert/utils/: common.py  model.py  sample_val_csv.py
ai_interview/projects/text-similarity/bert/性能测试结果/title/: milvus.bert.v9.csv  milvus.bert.v9_1.csv  milvus.bert.v9_2.csv  milvus.bert.v9_3.csv  milvus.bert.v9_3_1.csv  milvus.bert.v9_4.csv  milvus.bert.v9_5.csv
ai_interview/projects/text-similarity/bow/: analysis.ipynb  config.py  config.toml  dataset.py  db.py  evaluate.py  evaluate_news.py  evaluate_title.py  feature_extractor.py  main.py  readme.md  search.py  text_feature_extractor.py  type_definitions.py  util.py  vector.py  vocab.py  性能测试新闻.csv
ai_interview/projects/text-similarity/bow/cache/: .search_history
ai_interview/projects/text-similarity/bow/utils/: common.py
ai_interview/projects/text-similarity/bow/性能测试/: milvus.bow.v1.json
ai_interview/projects/text-similarity/bow/性能测试结果/: milvus.bow.v1.json  milvus.bow.v2.json
ai_interview/projects/text-similarity/crawler_news_failed/: main.py  pyproject.toml
ai_interview/projects/text-similarity/crawler_news_playwright/: main.py  readme.md  type_definitions.py  utils.py
ai_interview/projects/text-similarity/crawler_news_playwright/lib/: category.js  news_item.js  news_list.js
ai_interview/projects/text-similarity/gensim-word2vector/: analysis.ipynb  cbow_dataset.py  config.py  config.toml  evaluate_title.py  feature_extractor.py  model.py  readme.md  search.py  test.ipynb  train.py  type_definitions.py  vectory.py  vocab.py
ai_interview/projects/text-similarity/gensim-word2vector/data/: vocab_test_1000.txt  vocab_val_10000.txt
ai_interview/projects/text-similarity/gensim-word2vector/model/: cbow.py  cbow_bak.py
ai_interview/projects/text-similarity/gensim-word2vector/utils/: train.py
ai_interview/projects/text-similarity/utils/: dataset_split.py  json_to_csv.py
ai_interview/projects/text-similarity/word2vector/: analysis.ipynb  cbow_dataset.py  config.py  config.toml  db.py  evaluate_title.py  feature_extractor.py  readme.md  test.ipynb  train.py  type_definitions.py  vocab.py
ai_interview/projects/text-similarity/word2vector-siamese/: config.py  config.toml  evaluate_title.py  feature_extractor.py  model.py  readme.md  search.py  test.ipynb  train.py  type_definitions.py  vectory.py  vocab.py
ai_interview/projects/text-similarity/word2vector-siamese/utils/: common.py  train.py
ai_interview/projects/text-similarity/word2vector/model/: cbow.py  cbow_bak.py  vector.py
ai_interview/projects/text-similarity/word2vector/utils/: common.py  sample_val_csv.py  train.py
第二期/week3-gpt2/hugging-face/performance_test/: .gitignore  README.md  analysis.ipynb  dataset.py  ds_config.json  eval.py  eval.txt  main.py  performance.txt  pyproject.toml  test.ipynb  train.py  writing_prompts.py
第二期/week3-gpt2/hugging-face/performance_test/utils/: common.py  dataset.py  model.py
(+1655 files in other folders)
