[project]
name = "dh-ai"
version = "0.1.0"
description = "AI tools for the https://www.dhcode.cn/"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.4",
    "dotenv>=0.9.9",
    "gensim>=4.3.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy<2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "timm>=1.0.14",
    "torchinfo>=1.8.0",
    "torchvision>=0.15.2",
    "transformers>=4.49.0",
    "uv>=0.6.2",
    "wandb>=0.19.7",
]
[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv.workspace]
members = ["第二期/week3-gpt2/gpt-2-Pytorch", "第二期/week3-gpt2/hugging-face/performance_test"]
