[project]
name = "text-similarity"
version = "0.1.0" 
description = "文本相似度计算"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynaconf>=3.2.10",
    "jieba>=0.42.1",
    "memory-profiler>=0.61.0",
    "milvus-lite>=2.4.11",
    "pydantic>=2.10.6",
    "pymilvus>=2.5.5",
    "scipy>=1.13.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]
