[project]
name = "performance-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.3.2",
    "evaluate>=0.4.3",
    "kaggle>=1.6.17",
    "nltk>=3.9.1",
    "pydantic>=2.10.6",
    "rouge-score>=0.1.2",
    "torchvision>=0.15.2",
    "transformers>=4.49.0",
]
